# cra-sbom-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
cra_sbom_cli/: __init__.py  cli.py  command_runner.py  compliance_engine.py  enrichment.py  evidence_catalogue.py  report_export.py  sbom_parser.py
docs/: COMPLIANCE.md  INSTALLATION.md  USAGE.md
